manifests/test-app17-deploy.yaml
---
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: test-app17
  labels:
    app: test-app17
    version: 0.0.1
    backstage.io/kubernetes-id: test-app17
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-app17
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: test-app17
        version: 0.0.1
        backstage.io/kubernetes-id: test-app17
      annotations:
        sidecar.istio.io/proxyCPU: "100m"
        sidecar.istio.io/proxyMemory: "128Mi"
        sidecar.istio.io/proxyCPULimit: "200m"
        sidecar.istio.io/proxyMemoryLimit: "128Mi"        
    spec:
      containers:
      - name: test-app17
        image: lab-registry.wwtlab.net/images/test-app17:latest
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: "50m"
            memory: "64Mi"
          limits:
            cpu: "100m"
            memory: "128Mi"
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        readinessProbe:
          httpGet:
            port: 80
            path: /health-check/readiness
        livenessProbe:
          httpGet:
            port: 80
            path: /health-check/liveness
          initialDelaySeconds: 3
          periodSeconds: 15
