manifests/test-app17-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: test-app17-svc
  labels:
    app: test-app17
    version: 0.0.1
    backstage.io/kubernetes-id: test-app17
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: test-app17
